--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,38 +1,54 @@
 # ==================== PYTHON ====================
 
-# Backend Requirements
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-sqlalchemy==2.0.25
-pydantic==2.5.3
-pydantic-settings==2.1.0
-python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-aiofiles==23.2.1
+# Core
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
+sqlalchemy>=2.0.36
+pydantic>=2.10.0
+pydantic-settings>=2.7.0
+python-multipart>=0.0.20
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+aiofiles>=24.1.0
 
 # Vector & Search
-qdrant-client==1.9.0
-sentence-transformers==2.2.2
-bm25s==0.2.1
+qdrant-client>=1.12.0
+sentence-transformers>=3.1.0
+bm25s>=0.2.2
 
 # LLM
-openai==1.10.0
-langchain==0.1.5
-langchain-openai==0.0.8
+openai>=1.55.0
+langchain>=0.3.0
+langchain-core>=0.3.0
+langchain-openai>=0.2.0
+anthropic>=0.40.0
+google-generativeai>=0.8.0
 
 # Knowledge Graph
-networkx==3.2.1
-neo4j==5.15.0  # 可选
+networkx>=3.4
+neo4j>=5.26.0  # 可选
 
 # Document Parsing
-python-docx==1.1.0
-markdown==3.5.2
-beautifulsoup4==4.12.2
-python-magic==0.4.27
+python-docx>=1.1.2
+markdown>=3.7
+beautifulsoup4>=4.12.3
+python-magic>=0.4.27
 
 # Utils
-python-dotenv==1.0.0
-loguru==0.7.2
-tiktoken==0.6.0
-httpx==0.26.0
+python-dotenv>=1.0.1
+loguru>=0.7.2
+tiktoken>=0.8.0
+httpx>=0.28.0
+orjson>=3.10.0  # 快速 JSON
+cachetools>=5.5.0
+python-dateutil>=2.9.0
+
+# Redis (可选)
+redis>=5.2.0
+celery>=5.5.0
+
+# Testing
+pytest>=8.3.0
+pytest-asyncio>=0.24.0
+pytest-cov>=6.0.0
+httpx>=0.28.0
