--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,35 +1,49 @@
 {
   "name": "litekb-frontend",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx --fix",
+    "format": "prettier --write src/",
+    "test": "vitest",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
-    "vue": "^3.4.15",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
-    "naive-ui": "^2.38.1",
+    "vue": "^3.5.0",
+    "vue-router": "^4.4.0",
+    "pinia": "^2.2.0",
+    "naive-ui": "^2.40.0",
     "@vicons/ionicons5": "^0.12.0",
-    "axios": "^1.6.5",
-    "d3": "^7.8.5",
-    "marked": "^11.1.1",
-    "highlight.js": "^11.9.0"
+    "axios": "^1.7.0",
+    "d3": "^7.9.0",
+    "marked": "^15.0.0",
+    "highlight.js": "^11.10.0",
+    "dayjs": "^1.11.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.3",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.11",
-    "vue-tsc": "^1.8.27",
-    "@types/node": "^20.11.5",
-    "@types/d3": "^7.4.3",
-    "eslint": "^8.56.0",
-    "eslint-plugin-vue": "^9.20.1",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.33",
-    "autoprefixer": "^10.4.17"
+    "@vitejs/plugin-vue": "^5.1.0",
+    "vite": "^5.4.0",
+    "typescript": "^5.6.0",
+    "vue-tsc": "^2.1.0",
+    "@types/node": "^22.0.0",
+    "@types/d3": "^7.4.0",
+    "eslint": "^9.12.0",
+    "eslint-plugin-vue": "^9.28.0",
+    "@eslint/js": "^9.12.0",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0",
+    "prettier": "^3.3.0",
+    "vitest": "^2.1.0",
+    "@vue/test-utils": "^2.4.0",
+    "@playwright/test": "^1.48.0"
+  },
+  "engines": {
+    "node": ">=20.0.0",
+    "pnpm": ">=9.0.0"
   }
 }
