--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,10 @@ python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 aiofiles>=24.1.0
 
+# Rate Limiting & Security
+slowapi>=0.1.9  # 限流
+python-hcl2>=0.8.0
+
 # Vector & Search
 qdrant-client>=1.12.0
 sentence-transformers>=3.1.0
@@ -46,6 +50,13 @@ python-dateutil>=2.9.0
 # Redis (可选)
 redis>=5.2.0
 celery>=5.5.0
+
+# Monitoring & Error Tracking
+sentry-sdk>=2.0.0  # 错误追踪
+prometheus-client>=0.20.0  # 指标暴露
+
+# Backup & SSL
+cryptography>=42.0.0  # SSL 证书
 
 # Testing
 pytest>=8.3.0
