chore: P0生产优化完成
- docker-compose.prod.yml: 添加Langfuse环境变量、Redis认证
- .env.example: 完善所有环境变量说明
- README.md: 更新架构图和特性说明
- docs/DEPLOYMENT.md: 新增部署指南

--- a/.env.example
+++ b/.env.example
@@ -1,79 +1,55 @@
-# LiteKB 环境变量配置
-# 复制此文件为 .env 并填写真实值
+# LiteKB 环境配置
+# 生产环境必须修改所有密钥！
 
-# ==================== 应用配置 ====================
-SECRET_KEY=your-super-secret-key-min-32-chars-long-change-this
-DEBUG=false
-APP_NAME=LiteKB
+# ==================== 应用密钥 ====================
+SECRET_KEY=your-secret-key-min-32-chars-change-this
+JWT_ALGORITHM=HS256
+TOKEN_EXPIRE_MINUTES=60
 
 # ==================== 数据库 ====================
-# 开发环境 (SQLite)
-# DATABASE_URL=sqlite:///./data/litekb.db
-
-# 生产环境 (PostgreSQL)
-DATABASE_URL=postgresql://litekb:your_secure_password@localhost:5432/litekb
+POSTGRES_PASSWORD=your-postgres-password-min-16-chars
 
 # ==================== Redis ====================
-REDIS_URL=redis://localhost:6379/0
+REDIS_PASSWORD=your-redis-password-min-16-chars
 
-# ==================== Qdrant 向量库 ====================
-QDRANT_URL=http://localhost:6333
-QDRANT_API_KEY=your_qdrant_api_key_if_needed
-QDRANT_COLLECTION=litekb_chunks
+# ==================== Qdrant ====================
+QDRANT_API_KEY=your-qdrant-api-key-optional
 
-# ==================== Neo4j 图数据库 (可选) ====================
-NEO4J_URL=bolt://localhost:7687
-NEO4J_USER=neo4j
-NEO4J_PASSWORD=your_neo4j_password
+# ==================== OpenAI ====================
+OPENAI_API_KEY=sk-your-openai-api-key
 
 # ==================== LLM 提供商 ====================
-# OpenAI (默认)
-LLM_PROVIDER=openai
-OPENAI_API_KEY=sk-your-openai-api-key
-OPENAI_MODEL=gpt-4o
+LLM_PROVIDER=openai  # openai, ollama, anthropic, vllm
 EMBEDDING_PROVIDER=openai
-EMBEDDING_MODEL=text-embedding-3-small
 
-# Anthropic Claude (可选)
-ANTHROPIC_API_KEY=sk-ant-your-anthropic-key
-ANTHROPIC_MODEL=claude-3-5-sonnet-20241022
-
-# Google Gemini (可选)
-GOOGLE_API_KEY=your-google-api-key
-GEMINI_MODEL=gemini-1.5-pro
-
-# Ollama 本地 (可选)
+# ==================== Ollama (可选) ====================
 OLLAMA_URL=http://localhost:11434
-OLLAMA_MODEL=qwen2.5:7b
+OLLAMA_MODEL=llama2
 
-# vLLM 本地 (可选)
-VLLM_URL=http://localhost:8000/v1
-VLLM_MODEL=Qwen/Qwen2.5-7B-Instruct
+# ==================== vLLM (可选) ====================
+VLLM_URL=http://localhost:8001
 
-# ==================== Celery 任务队列 ====================
-CELERY_BROKER_URL=redis://localhost:6379/0
-CELERY_RESULT_URL=redis://localhost:6379/1
+# ==================== Anthropic (可选) ====================
+ANTHROPIC_API_KEY=sk-ant-your-anthropic-key
 
-# ==================== JWT 配置 ====================
-JWT_SECRET_KEY=your-super-secret-key-min-32-chars
-TOKEN_EXPIRE_MINUTES=60
-REFRESH_TOKEN_EXPIRE_DAYS=7
+# ==================== Langfuse 可观测性 (可选) ====================
+LANGFUSE_ENABLED=false
+LANGFUSE_PUBLIC_KEY=pk-your-langfuse-public-key
+LANGFUSE_SECRET_KEY=sk-your-langfuse-secret-key
+LANGFUSE_HOST=https://cloud.langfuse.com
 
 # ==================== CORS ====================
-# 开发环境
-# CORS_ORIGINS=http://localhost:3000
+CORS_ORIGINS=http://localhost:3000,https://your-domain.com
 
-# 生产环境
-# CORS_ORIGINS=https://your-domain.com
+# ==================== Grafana ====================
+GRAFANA_PASSWORD=your-grafana-password
 
-# ==================== 文件存储 ====================
-UPLOAD_DIR=./data/uploads
-MAX_FILE_SIZE=10485760  # 10MB
+# ==================== 数据库连接池 ====================
+DB_POOL_SIZE=20
+DB_MAX_OVERFLOW=40
+DB_POOL_TIMEOUT=30
+DB_POOL_RECYCLE=1800
 
-# ==================== 监控 (可选) ====================
-SENTRY_DSN=your-sentry-dsn
-METRICS_ENABLED=false
-
-# ==================== 日志 ====================
+# ==================== 开发配置 ====================
+DEBUG=false
 LOG_LEVEL=INFO
-LOG_FORMAT=json
