--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -21,8 +21,8 @@ services:
       # 数据库
       - DATABASE_URL=postgresql://litekb:${POSTGRES_PASSWORD}@postgres:5432/litekb
       
-      # Redis
-      - REDIS_URL=redis://redis:6379/0
+      # Redis (带认证)
+      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
       
       # Qdrant
       - QDRANT_URL=http://qdrant:6333
@@ -34,10 +34,17 @@ services:
       - EMBEDDING_PROVIDER=openai
       
       # JWT
+      - JWT_ALGORITHM=HS256
       - TOKEN_EXPIRE_MINUTES=60
       
       # CORS
       - CORS_ORIGINS=${CORS_ORIGINS}
+    
+    # Langfuse 可观测性
+      - LANGFUSE_ENABLED=${LANGFUSE_ENABLED:-false}
+      - LANGFUSE_PUBLIC_KEY=${LANGFUSE_PUBLIC_KEY}
+      - LANGFUSE_SECRET_KEY=${LANGFUSE_SECRET_KEY}
+      - LANGFUSE_HOST=${LANGFUSE_HOST:-https://cloud.langfuse.com}
     
     deploy:
       replicas: 2
@@ -50,7 +57,7 @@ services:
           memory: 1G
     
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/health && curl -f http://localhost:8000/ready"]
       interval: 30s
       timeout: 10s
       start_period: 10s
@@ -79,9 +86,9 @@ services:
     command: celery -A app.tasks worker --loglevel=info --concurrency=4
     environment:
       - DATABASE_URL=postgresql://litekb:${POSTGRES_PASSWORD}@postgres:5432/litekb
-      - REDIS_URL=redis://redis:6379/0
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_URL=redis://redis:6379/1
+      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
+      - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
+      - CELERY_RESULT_URL=redis://:${REDIS_PASSWORD}@redis:6379/1
     depends_on:
       - redis
       - postgres
@@ -100,8 +107,8 @@ services:
     command: celery -A app.tasks beat --loglevel=info
     environment:
       - DATABASE_URL=postgresql://litekb:${POSTGRES_PASSWORD}@postgres:5432/litekb
-      - REDIS_URL=redis://redis:6379/0
-      - CELERY_BROKER_URL=redis://redis:6379/0
+      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
+      - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
     depends_on:
       - redis
     networks:
@@ -166,11 +173,11 @@ services:
     networks:
       - litekb_network
 
-  # ==================== Redis ====================
+  # ==================== Redis (带认证) ====================
   redis:
     image: redis:7-alpine
     restart: unless-stopped
-    command: redis-server --appendonly yes
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD} --maxmemory 512mb --maxmemory-policy allkeys-lru
     volumes:
       - redis_data:/data
     deploy:
@@ -190,6 +197,9 @@ services:
       - "6334:6334"
     volumes:
       - qdrant_data:/qdrant/storage
+    environment:
+      - QDRANT__STORAGE__PERFORMANCE__MAX_OPTIMIZERS_THREADS=4
+      - QDRANT__STORAGE__PERFORMANCE__MAX_SEARCH_THREADS=4
     deploy:
       resources:
         limits:
