--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
 env:
   PYTHON_VERSION: '3.10'
   NODE_VERSION: '18'
+  PNPM_VERSION: '9'
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
@@ -68,47 +69,51 @@ jobs:
           files: ./backend/coverage.xml
           fail_ci_if_error: false
 
-  # ==================== 前端构建 ====================
+  # ==================== 前端构建 (pnpm) ====================
   frontend-build:
     runs-on: ubuntu-latest
     
     steps:
       - uses: actions/checkout@v4
       
+      - name: Set up pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+      
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
+          cache: 'pnpm'
       
-      - name: Cache npm dependencies
+      - name: Cache pnpm dependencies
         uses: actions/cache@v4
         with:
-          path: frontend/node_modules
-          key: ${{ runner.os }}-npm-${{ hashFiles('frontend/package-lock.json') }}
+          path: frontend/.pnpm-store
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('frontend/pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-npm-
+            ${{ runner.os }}-pnpm-
       
       - name: Install dependencies
         working-directory: ./frontend
-        run: npm ci
+        run: pnpm install --frozen-lockfile
       
       - name: Run linting
         working-directory: ./frontend
-        run: |
-          npm run lint
+        run: pnpm run lint
       
       - name: Run type check
         working-directory: ./frontend
-        run: npm run typecheck
+        run: pnpm run typecheck
       
       - name: Run tests
         working-directory: ./frontend
-        run: npm run test --if-present
+        run: pnpm run test --if-present
       
       - name: Build
         working-directory: ./frontend
-        run: npm run build
+        run: pnpm run build
         env:
           VITE_API_URL: http://localhost:8000
       
