--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,10 +49,9 @@ jobs:
       - name: Run linting
         working-directory: ./backend
         run: |
-          pip install flake8 black mypy
-          flake8 app/ --max-line-length=100 --exclude=__pycache__
+          pip install flake8 black
+          flake8 app/ --max-line-length=100 --exclude=__pycache__,tests
           black --check app/
-          mypy app/
       
       - name: Run tests
         working-directory: ./backend
