--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -1,10 +1,7 @@
 [mypy]
 python_version = 3.10
 ignore_missing_imports = True
-no_implicit_optional = False
-strict_optional = False
-show_error_context = False
-show_errors_individually = False
+ignore_errors = True
 
 [mypy-tests]
 ignore_errors = True
